--- a/12. 전진 3d 스크롤/css/style.css
+++ b/12. 전진 3d 스크롤/css/style.css
@@ -58,3 +58,18 @@ body {
   font-size: 5rem;
 }
 
+/* progress-bar-con */
+.progress-bar-con {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 5px;
+  background: #555;
+  z-index: 100;
+}
+.progress-bar {
+  width: 0;
+  height: 100%;
+  background: #00a8ff;
+}
