띄어쓰기 수정

--- a/12. 전진 3d 스크롤/css/reset.css
+++ b/12. 전진 3d 스크롤/css/reset.css
@@ -28,7 +28,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 ol,
-ul {
+ul,
+#left-area ul, .entry-content ul, .et-l--body ul, .et-l--footer ul, .et-l--header ul {
 	list-style: none;
 }
 table {
